# fs-agent

./: .gitignore  IMPLEMENTATION_SUMMARY.md  Modelfile  README.md  demo_write_capabilities.py  next-steps.md  pyproject.toml  write-file.md
fs_agent/: agent.py  cli.py  debug_test.py  tools.py
tests/: __init__.py  run_functional_tests.py  test_write_file.py
